--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Echo of Star - Eating Disorder Support</title>
     
-    <!-- 引入Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     
-    <!-- 引入Google Fonts (Inter) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Sans+SC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -24,12 +22,15 @@
             scroll-behavior: smooth;
         }
 
-        /* 自定义马卡龙色系 */
-        .bg-macaron-pink { background-color: #fce7f3; } /* 淡粉色 */
-        .bg-macaron-blue { background-color: #dbeafe; } /* 淡蓝色 */
-        .bg-macaron-green { background-color: #d1fae5; } /* 淡绿色 */
-        .bg-macaron-yellow { background-color: #fef3c7; } /* 淡黄色 */
-        .text-macaron-deep-gray { color: #4b5563; } /* 深灰色文字 */
+        .bg-macaron-pink { background-color: #fce7f3; } 
+        .bg-macaron-blue { background-color: #dbeafe; } 
+        .bg-macaron-green { background-color: #d1fae5; } 
+        .bg-macaron-yellow { background-color: #fef3c7; } 
+        .bg-macaron-purple { background-color: #f3e8ff; } 
+        .bg-macaron-orange { background-color: #ffedd5; } 
+        .bg-macaron-teal { background-color: #ccfbf1; } 
+        .bg-macaron-gray { background-color: #f3f4f6; }
+        .text-macaron-deep-gray { color: #4b5563; } 
         .btn-macaron {
             background-color: #a5b4fc; /* 淡紫色按钮，更柔和 */
             color: white;
