--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <section id="prevalence" class="bg-macaron-purple py-20">
             <div class="container mx-auto px-6 h-96">
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-800 text-center mb-8">Lifetime Prevalence</h2>
-                
+                <iframe src="https://ourworldindata.org/grapher/eating-disorders-prevalence-by-age?tab=line&time=earliest..2021" loading="lazy" style="width: 100%; height: 600px; border: 0px none;" allow="web-share; clipboard-write"></iframe>
                 <div class="text-center text-gray-600"></div>
             </div>
         </section>
