--- a/index.html
+++ b/index.html
@@ -171,17 +171,9 @@
 
     
         <section id="prevalence" class="bg-macaron-purple py-20">
-            <div class="container mx-auto px-6 h-[660px]">
+            <div class="container mx-auto px-6 h-[700px]">
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-800 text-center mb-8">Lifetime Prevalence</h2>
                 <iframe src="https://ourworldindata.org/grapher/eating-disorders-prevalence?tab=line&time=earliest..2021" loading="lazy" style="width: 100%; height: 600px; border: 0px none;" allow="web-share; clipboard-write"></iframe>
-                <div class="text-center text-gray-600"></div>
-            </div>
-        </section>
-
-        <section id="gender" class="bg-macaron-orange py-20">
-            <div class="container mx-auto px-6 h-[660px]">
-                <h2 class="text-3xl md:text-4xl font-bold text-gray-800 text-center mb-8">Gender Distribution</h2>
-                <iframe src="https://ourworldindata.org/grapher/eating-disorders-prevalence-males-vs-females?tab=chart" loading="lazy" style="width: 100%; height: 600px; border: 0px none;" allow="web-share; clipboard-write"></iframe>
                 <div class="text-center text-gray-600"></div>
                 <p class="text-center text-sm text-gray-500 mt-4 italic">
                     Data Source: <a href="#" class="underline hover:text-indigo-500 transition-colors">https://ourworldindata.org/grapher/eating-disorders-prevalence</a>
@@ -189,11 +181,25 @@
             </div>
         </section>
 
+        <section id="gender" class="bg-macaron-orange py-20">
+            <div class="container mx-auto px-6 h-[700px]">
+                <h2 class="text-3xl md:text-4xl font-bold text-gray-800 text-center mb-8">Gender Distribution</h2>
+                <iframe src="https://ourworldindata.org/grapher/eating-disorders-prevalence-males-vs-females?tab=chart" loading="lazy" style="width: 100%; height: 600px; border: 0px none;" allow="web-share; clipboard-write"></iframe>
+                <div class="text-center text-gray-600"></div>
+                <p class="text-center text-sm text-gray-500 mt-4 italic">
+                    Data Source: <a href="#" class="underline hover:text-indigo-500 transition-colors">https://ourworldindata.org/grapher/eating-disorders-prevalence-males-vs-females</a>
+                </p>
+            </div>
+        </section>
+
         <section id="age distribution" class="bg-macaron-teal py-20">
-            <div class="container mx-auto px-6 h-[660px]">
+            <div class="container mx-auto px-6 h-[700px]">
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-800 text-center mb-8">Age Distribution</h2>
                 <iframe src="https://ourworldindata.org/grapher/eating-disorders-prevalence-by-age?tab=line&time=earliest..2021" loading="lazy" style="width: 100%; height: 600px; border: 0px none;" allow="web-share; clipboard-write"></iframe>
                 <div class="text-center text-gray-600"></div>
+                <p class="text-center text-sm text-gray-500 mt-4 italic">
+                    Data Source: <a href="#" class="underline hover:text-indigo-500 transition-colors">https://ourworldindata.org/grapher/eating-disorders-prevalence-by-age</a>
+                </p>
             </div>
         </section>
         <!-- END: 新增数据板块 -->
