--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     
         <section id="prevalence" class="bg-macaron-purple py-20">
-            <div class="container mx-auto px-6 h-[730px]">
+            <div class="container mx-auto px-6 h-[720px]">
                 <h2 class="text-3xl md:text-4xl font-bold text-gray-800 text-center mb-8">Lifetime Prevalence</h2>
                 <iframe src="https://ourworldindata.org/grapher/eating-disorders-prevalence?tab=line&time=earliest..2021" loading="lazy" style="width: 100%; height: 600px; border: 0px none;" allow="web-share; clipboard-write"></iframe>
                 <div class="text-center text-gray-600"></div>
@@ -214,9 +214,7 @@
                     </p>
                 </div>
                 <div class="max-w-4xl mx-auto aspect-w-16 aspect-h-9 bg-black rounded-2xl shadow-lg overflow-hidden">
-                    <video class="w-full h-full object-cover" controls poster="https://placehold.co/1280x720/1e293b/ffffff?text=Video+Player">
-                        <!-- <source src="your-video.mp4" type="video/mp4"> -->
-                        Your browser does not support the video tag.
+                    <video class="w-full h-full object-cover" controls poster="https://youtu.be/7ba2-4x88fs?si=I3PinLsb57GCPG2C">
                     </video>
                 </div>
             </div>
