--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
                     </p>
                 </div>
                 <div class="max-w-4xl mx-auto aspect-w-16 aspect-h-9 bg-black rounded-2xl shadow-lg overflow-hidden">
-                    <video class="w-full h-full object-cover" controls poster="https://youtu.be/7ba2-4x88fs?si=c3b9ZKaSsqJ3S52q">
+                    <video class="w-full h-full object-cover" 
+                        <source src="file:///Users/liuziman/Desktop/Video/myvideo.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
