--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 </div>
                 <div class="max-w-4xl mx-auto aspect-w-16 aspect-h-9 bg-black rounded-2xl shadow-lg overflow-hidden">
                 <video class="w-full h-full object-cover" controls poster="your-poster-image.jpg">
-                <source src="/Users/liuziman/Desktop/Creative Technologies/Final/7月9日_副本.mp4" type="video/mp4">
+                <source src="/Users/liuziman/Desktop/Creative Technologies/Final/echoofstar.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
