--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <!-- END: 新增数据板块 -->
 
         <!-- Video Story Section -->
-        <section id="video-story" class="bg-macaron-gray py-20"> <!-- 更改了背景颜色 -->
+        <section id="video-story" class="bg-macaron-gray py-20"> 
             <div class="container mx-auto px-6">
                 <div class="text-center mb-12">
                     <h2 class="text-3xl md:text-4xl font-bold text-gray-800">Video Story</h2>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="max-w-4xl mx-auto aspect-w-16 aspect-h-9 bg-black rounded-2xl shadow-lg overflow-hidden">
                 <video class="w-full h-full object-cover" controls poster="your-poster-image.jpg">
-                <source src="/Users/liuziman/Desktop/Creative Technologies/Final/echoofstar.mp4" type="video/mp4">
+                <source src="video/echo_of_star" type="video/mp4">
                     </video>
                 </div>
             </div>
